Start adding HebeScraper, add scraper interface and strategy pattern